<resources>
    <string name="app_name">Album_Pedro_Bernardo</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Name: </string>
    <string name="artist">Artist:</string>
    <string name="album">Album: </string>
    <string name="ano">Year: </string>
    <string name="all_spiner">All</string>
    <string name="song_spiner">Song Name</string>
    <string name="artist_spiner">Artist</string>
    <string name="album_spiner">Album</string>
    <string name="ano_spiner">Year</string>
    <string name="rating_spiner">Rating</string>
    <string name="rating_error">Rating must be numeric value between 1 and 5</string>
    <string name="no_results">No results found.</string>
    <string name="found1">Found </string>
    <string name="found2"> results</string>
    <string name="new_song_enter">Enter new song info:</string>
    <string name="hint_song">Song Name</string>
    <string name="hint_artist">Artist Name</string>
    <string name="hint_album">Album Name</string>
    <string name="hint_year">Release Year</string>
    <string name="hint_rating">Rating</string>
    <string name="acept">Accept</string>
    <string name="add_success">New song added to playlist</string>
    <string name="add_fail1">Error - Year must be numeric value</string>
    <string name="add_fail2">Error - Rating must be numeric value</string>
    <string name="add_fail3">Error - Please fill in all fields</string>
    <string name="cancel">Cancel</string>
    <string name="info">Info</string>
    <string name="now_playing">Now Playing</string>
    <string name="pause_resume">Pause/Resume</string>
    <string name="rate_this">Rate this:</string>
    <string name="write_search_term">Write search term...</string>
    <string name="search">Search</string>
    <string name="add_song">Add New Song</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this song?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="publisher">Publisher:</string>
    <string name="hint_publisher">Publisher Name</string>
    <string name="publisher_spiner">Publisher</string>
</resources>
